e.tagName+.+e.className)} => {txt[:80]}')
    browser.close()

  File "<string>", line 16
    print(f'[{vis}] {el.evaluate(e
          ^
SyntaxError: unterminated string literal (detected at line 16)
